--- a/unit3/index.html
+++ b/unit3/index.html
@@ -9,16 +9,23 @@
 
 <body>
 
-	<img src="assets/images/stripes.png">
-
 <div id="page">
 
-	<div id="main"
+	<div id="column1">
 	<H1><img src="assets/images/logo-taasky.png"></H1>
-	<hr>
-	<p>Beautiful, simple and easy to use task manager.</p>
-	<a href="https://itunes.apple.com/us/app/taasky-beautiful-simple-easy/id720309412?l=cs&ls=1&mt=8"><img src="assets/images/btn_store.png"></a>
+
+		<div id="line">
+		<hr>
+		</div>
+
+		<p>Beautiful, simple and easy to use task manager.</p>
+		<a href="https://itunes.apple.com/us/app/taasky-beautiful-simple-easy/id720309412?l=cs&ls=1&mt=8"><img src="assets/images/btn_store.png"></a>
 	</div>
+
+	<div id="column2">
+	<img src="assets/images/phone.jpg">
+	</div>
+
 
 
 </div>
