--- a/unit4/index.html
+++ b/unit4/index.html
@@ -45,8 +45,11 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur consectetur auctor est at finibus. Nulla non leo a est congue vestibulum mattis eu justo. Suspendisse posuere facilisis dolor eu aliquet. Phasellus ullamcorper fermentum ante vitae pharetra. Quisque tristique lobortis nisi, a consectetur ligula blandit id. Donec viverra eu felis vel tincidunt. Mauris vitae ullamcorper nisl. Suspendisse in nunc ante.</p>
 
 
-			<div id="button">
-			<a href="images/menu.pdf" class="button" role='button"'>MENU</a>
+			<div id="button_outside">
+				<div id="button_text">
+				<a href="images/menu.pdf" target="_blank">MENU</a>
+				</div>
+			<a href="images/menu.pdf" target="_blank"></a>
 			</div>
 
 		</div>
