More updates to project 4
Changing css order and adding span tag to make word mark responsive.

--- a/unit4/index.html
+++ b/unit4/index.html
@@ -14,23 +14,24 @@
 
 	<div id="page">
 
-		<div id="header">
+		<header>
 
 			<div id="header_content">
 	
-				<div id="short">
-					<h1>short Sweet</h1>
-					<h1 class="ampersand">&</h1>			
+				<div id="wordmark">
+				<h1>short <span class="ampersand">&</span> Sweet</h1>			
 				</div>
 
+				<div id="patisserie">
 				<h2>Patisserie</h2>
-				<hr>					
+				<hr>	
+				</div>				
 		
 			</div>
 
 			</div>
 
-		</div>
+		</header>
 
 		<div id="content">
 
