Adding footer to project 4
I added some footer content in a footer tag and edited some classes and
ids.

--- a/unit4/index.html
+++ b/unit4/index.html
@@ -48,12 +48,17 @@
 
 			<div id="button_outside">
 				<div id="button_text">
-				<a href="images/menu.pdf" target="_blank">MENU</a>
+				<a class="menu_button" href="images/menu.pdf" target="_blank">MENU</a>
 				</div>
-			<a href="images/menu.pdf" target="_blank"></a>
+			<a class="menu_button" href="images/menu.pdf" target="_blank"></a>
 			</div>
 
 		</div>
+
+		<footer>
+		<hr class="footer_hr">
+		<p class="footer_content">&copy; 2014 Short & Sweet. <strong>Contact us:</strong> 206 Marie Heinekenplein, Amsterdam 1072ML / <a href="mailto:info@shortandsweet.nl">info@shortandsweet.nl</a><p>
+		</footer>
 
 	</div>
 	
