--- a/unit6/index.html
+++ b/unit6/index.html
@@ -20,7 +20,7 @@
 		</div>
 
 		<nav>
-		   	<a href="#">Specifications</a>
+		   	<a href="#">Watch The Video</a>
 			<a href="#">Make Your Own</a>
 		</nav>
 	
@@ -34,30 +34,86 @@
 
 		<div id="intro">
 		<h1>Work Happy!</h1>
-		<br><p>It's your classic tale of recycling meeting opportunity, craft saving the day and a freelance designer not having the money or a kind enough boyfriend for hourly shoulder rubs. Taking a laptop from shared office to cafe to bar to home to get your hours in is cool, but it's torture on the trapezius if you don't have good working posture - and you can't have that without a good, high, mobile lap-top stand. Luckily, it's only a good template away. Use the Happy Stand template, and Work Happy.</p>	
+		<br>
+		<br>
+		<p>It's your classic tale of recycling meeting opportunity, craft saving the day and a freelance designer not having the money or a kind enough boyfriend for hourly shoulder rubs. Taking a laptop from shared office to cafe to bar to home to get your hours in is cool, but it's torture if you don't have good working posture - and you can't have that without a high, mobile lap-top stand. Luckily, it's only a good template away. Use the Happy Stand template, and Work Happy.</p>	
 		</div>
 	</header>
 		
 	<div id="content1">
-		<h2>It's easy peezy</h2>
-
-		<div id="step1">
-			<p><span class="dropcap">1</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus ipsum vitae finibus. </p>
-		</div>
-
-		<div id="step2">
-			<p><span class="dropcap">2</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus ipsum vitae finibus. </p>
-		</div>
-
-		<div id="step3">
-			<p><span class="dropcap">3</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus ipsum vitae finibus. </p>
-		</div>
-
-		<nav class="clearfix">
-			<a href="#">Make Your Own</a>
-       	 	<a href="#">Watch the video</a>
-		</nav>
+		<img src="images/stand1.png" width="325px" height="325px" class="floatleft">
+		<img src="images/stand2.png" width="325px" height="325px" class="floatleft">
+		<img src="images/stand3.png" width="325px" height="325px" class="floatleft">	
 	</div>
+
+	<div class="content_background">
+		
+		<div id="content2" class="clearfix">
+			<h2>Make your own</h2>
+
+			<div id="column1" class="floatleft">
+				<div id="column1a">
+				<img src="images/laptop.svg" width="110px" height="92px">
+				</div>
+
+				<div id="column1b">
+				<h4>Macbook air</h4>
+				<br>
+				<p>Lorem ipsum dolor sit amet, consectetur</p>
+				</div>
+
+				<div class="download_button">
+				<a href="#">Download</a>
+				</div>
+			</div>
+
+			<div id="column2" class="floatleft">
+				<div id="column2a">
+				<img src="images/laptop.svg" width="140px" height="117px">
+				</div>
+
+				<div id="column2b">
+				<h4>Macbook pro</h4>
+				<br>
+				<p>Lorem ipsum dolor sit amet, consectetur</p>
+				</div>
+
+				<div class="download_button">
+				<a href="#">Download</a>
+				</div>
+			</div>	
+
+
+		</div>
+
+		</div>
+	</div>
+
+	<div id="content3" class="clearfix">
+		
+		<div id="caption">
+		<h3>Watch the video</h3>
+		<br>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu ultricies mauris. Donec ut est vulputate, porttitor nulla eget, bibendum enim. In vitae massa ornare, tristique quam et, tincidunt dolor.</p></div>
+
+		<object id="video" width="420" height="315" data="http://www.youtube.com/v/zoo9Vu1a9bU"></object>
+		
+	</div>
+
+	<div id="content4">
+		<div id="contact">
+			
+			<h3>Got some feedback?</h3><br>
+			<h4>We would love to hear from you!</h4><br>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu ultricies mauris. Donec ut est vulputate, porttitor nulla eget, bibendum enim.</p>
+
+			<div class="email_button">
+				<a href="#">Email us</a>
+			</div>
+		</div>
+
+	</div>
+
 
 	<footer>
 		<div id="footerlogo">
@@ -66,11 +122,6 @@
 		
 		<div id="footertext">
 			<p>&copy; 2014 Happy Stands | <strong>Contact us: </strong><a href="mailto:info@shortandsweet.nl">info@happystands.com</a></p>
-		</div>
-
-		<div id="footernav">
-			<a href="#">Make Your Own</a>
-       	 	<a href="#">Specifications</a>
 		</div>
 	</footer>
 
