Update copy and layout
Adding some headings and updating copy. Adding ‘it’s free’ circle.

--- a/unit6/index.html
+++ b/unit6/index.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Happy Stand - your portable laptop stand</title>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Roboto:500,300' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:900,500,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
@@ -33,10 +33,14 @@
 		</div>
 
 		<div id="intro">
-		<h1>Work Happy!</h1>
-		<br>
-		<br>
-		<p>It's your classic tale of recycling meeting opportunity, craft saving the day and a freelance designer not having the money or a kind enough boyfriend for hourly shoulder rubs. Taking a laptop from shared office to cafe to bar to home to get your hours in is cool, but it's torture if you don't have good working posture - and you can't have that without a high, mobile lap-top stand. Luckily, it's only a good template away. Use the Happy Stand template, and Work Happy.</p>	
+			<h1>Work Happy!</h1>
+			<br>
+			<br>
+			<img src="images/free.svg" id="free">
+			<h5>The happy stand is a DIY cardboard laptop stand solution.</h5><br>
+			<p><strong>High: </strong>tall enough for a giant (longy)! Have the stand as tall or short as you like. Simply cut down the base panels to suit your height.</p><br>		
+			<p><strong>Light & portable: </strong>five pieces come apart and flat pack. Craboard is super light and suprisingly durable.</p><br>	
+			<p><strong>Free & Recycled: </strong>It doesn't cost anything and you can make it from any old box. You have control over the aesthic.</p><br>
 		</div>
 	</header>
 		
@@ -59,7 +63,7 @@
 				<div id="column1b">
 				<h4>Macbook air</h4>
 				<br>
-				<p>Lorem ipsum dolor sit amet, consectetur</p>
+				<p>Smaller template for use with your 11inch laptop.</p>
 				</div>
 
 				<div class="download_button">
@@ -75,7 +79,7 @@
 				<div id="column2b">
 				<h4>Macbook pro</h4>
 				<br>
-				<p>Lorem ipsum dolor sit amet, consectetur</p>
+				<p>Larger template for use with a laptops 13inches or greater.</p>
 				</div>
 
 				<div class="download_button">
@@ -94,7 +98,18 @@
 		<div id="caption">
 		<h3>Watch the video</h3>
 		<br>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu ultricies mauris. Donec ut est vulputate, porttitor nulla eget, bibendum enim. In vitae massa ornare, tristique quam et, tincidunt dolor.</p></div>
+		<p>See the complete step by step process of how to build your own happy stand.</p>
+		<br>
+		<h3>What you need</h3>
+		<br>
+		<ul>
+			<li>Print out of the template</li>		
+			<li>Stanley knife or scalpel</li>
+			<li>Cutting matt (excess cardboard will do)</li>
+			<li>Cardboard with a minimum 30cm square panel</li>	
+		</ul>
+
+		</div>
 
 		<object id="video" width="420" height="315" data="http://www.youtube.com/v/zoo9Vu1a9bU"></object>
 		
@@ -103,12 +118,12 @@
 	<div id="content4">
 		<div id="contact">
 			
-			<h3>Got some feedback?</h3><br>
+			<h3>Got some feedback?</h3><br><br>
 			<h4>We would love to hear from you!</h4><br>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu ultricies mauris. Donec ut est vulputate, porttitor nulla eget, bibendum enim.</p>
+			<p>The Happy Stand has been through many iterations and I am always looking to improve it in any way possible. Let us know if you come up with an improved solution or if you have any questions at all.</p>
 
 			<div class="email_button">
-				<a href="#">Email us</a>
+				<a href="mailto:info@happystands.com">Email us</a>
 			</div>
 		</div>
 
@@ -121,7 +136,7 @@
 		</div>
 		
 		<div id="footertext">
-			<p>&copy; 2014 Happy Stands | <strong>Contact us: </strong><a href="mailto:info@shortandsweet.nl">info@happystands.com</a></p>
+			<p>&copy; 2014 Happy Stands | <strong>Contact us: </strong><a href="mailto:info@happystands.com">info@happystands.com</a></p>
 		</div>
 	</footer>
 
