--- a/unit6/index.html
+++ b/unit6/index.html
@@ -39,8 +39,8 @@
 			<img src="images/free.svg" id="free">
 			<h5>The happy stand is a DIY cardboard laptop stand solution.</h5><br>
 			<p><strong>High: </strong>tall enough for a giant (longy)! Have the stand as tall or short as you like. Simply cut down the base panels to suit your height.</p><br>		
-			<p><strong>Light & portable: </strong>five pieces come apart and flat pack. Craboard is super light and suprisingly durable.</p><br>	
-			<p><strong>Free & Recycled: </strong>It doesn't cost anything and you can make it from any old box. You have control over the aesthic.</p><br>
+			<p><strong>Light & portable: </strong>five pieces come apart and flat pack. Cardboard is super light and suprisingly durable.</p><br>	
+			<p><strong>Free & Recycled: </strong>It doesn't cost anything and you can make it from any old box. You have control over the aesthetic.</p><br>
 		</div>
 	</header>
 		
