Jump to Links added
Adding in links that make the top nav work

--- a/unit6/index.html
+++ b/unit6/index.html
@@ -20,8 +20,8 @@
 		</div>
 
 		<nav>
-		   	<a href="#">Watch The Video</a>
-			<a href="#">Make Your Own</a>
+		   	<a href="#video_jump">Watch The Video</a>
+			<a href="#makeyourown_jump">Make Your Own</a>
 		</nav>
 	
 	</div>
@@ -50,10 +50,10 @@
 		<img src="images/stand3.png" width="325px" height="325px" class="floatleft">	
 	</div>
 
-	<div class="content_background">
-		
+	<div class="content_background"><a name="makeyourown_jump"></a>
+
 		<div id="content2" class="clearfix">
-			<h2>Make your own</h2>
+			<h2>Make your own</h2> 
 
 			<div id="column1" class="floatleft">
 				<div id="column1a">
@@ -87,27 +87,26 @@
 				</div>
 			</div>	
 
-
 		</div>
 
-		</div>
 	</div>
 
-	<div id="content3" class="clearfix">
+	<a name="video_jump"></a>
+	<div id="content3" class="clearfix"> 
 		
 		<div id="caption">
-		<h3>Watch the video</h3>
-		<br>
-		<p>See the complete step by step process of how to build your own happy stand.</p>
-		<br>
-		<h3>What you need</h3>
-		<br>
-		<ul>
-			<li>Print out of the template</li>		
-			<li>Stanley knife or scalpel</li>
-			<li>Cutting matt (excess cardboard will do)</li>
-			<li>Cardboard with a minimum 30cm square panel</li>	
-		</ul>
+			<h3>Watch the video</h3>
+			<br>
+			<p>See the complete step by step process of how to build your own happy stand.</p>
+			<br>
+			<h3>What you need</h3>
+			<br>
+			<ul>
+				<li>Print out of the template</li>		
+				<li>Stanley knife or scalpel</li>
+				<li>Cutting matt (excess cardboard will do)</li>
+				<li>Cardboard with a minimum 30cm square panel</li>	
+			</ul>
 
 		</div>
 
@@ -125,10 +124,15 @@
 			<div class="email_button">
 				<a href="mailto:info@happystands.com">Email us</a>
 			</div>
+
 		</div>
 
 	</div>
 
+
+	</div>
+
+	
 
 	<footer>
 		<div id="footerlogo">
