Final type changes
Updating the copy and removing additional typos

--- a/unit6/index.html
+++ b/unit6/index.html
@@ -37,10 +37,10 @@
 			<br>
 			<br>
 			<img src="images/free.svg" id="free">
-			<h5>The happy stand is a DIY cardboard laptop stand solution.</h5><br>
-			<p><strong>High: </strong>tall enough for a giant (longy)! Have the stand as tall or short as you like. Simply cut down the base panels to suit your height.</p><br>		
-			<p><strong>Light & portable: </strong>five pieces come apart and flat pack. Cardboard is super light and suprisingly durable.</p><br>	
-			<p><strong>Free & Recycled: </strong>It doesn't cost anything and you can make it from any old box. You have control over the aesthetic.</p><br>
+			<h5>The Happy Stand is the DIY cardboard laptop stand for you.</h5><br>
+			<p><strong>It goes higher: </strong>designed for giants, you can have it as tall or short as you like. Simply cut down the base panels to suit your height.</p><br>		
+			<p><strong>Take it anywhere: </strong>five pieces come apart and pack flat. Cardboard is super light and suprisingly durable.</p><br>	
+			<p><strong>Free & Recycled: </strong> It doesn't cost a thing and you can make it from any good box. Why stop at one?</p><br>
 		</div>
 	</header>
 		
@@ -63,7 +63,7 @@
 				<div id="column1b">
 				<h4>Macbook air</h4>
 				<br>
-				<p>Smaller template for use with your 11inch laptop.</p>
+				<p>Smaller template for use with your 11-inch laptop.</p>
 				</div>
 
 				<div class="download_button">
@@ -79,7 +79,7 @@
 				<div id="column2b">
 				<h4>Macbook pro</h4>
 				<br>
-				<p>Larger template for use with a laptops 13inches or greater.</p>
+				<p>Larger template for use with laptops 13-inches or greater.</p>
 				</div>
 
 				<div class="download_button">
@@ -97,15 +97,15 @@
 		<div id="caption">
 			<h3>Watch the video</h3>
 			<br>
-			<p>See the complete step by step process of how to build your own happy stand.</p>
+			<p>Let me guide you step-by-step to build your own Happy Stand.</p>
 			<br>
 			<h3>What you need</h3>
 			<br>
 			<ul>
 				<li>Print out of the template</li>		
-				<li>Stanley knife or scalpel</li>
+				<li>Stanley knife or boxcutter</li>
 				<li>Cutting matt (excess cardboard will do)</li>
-				<li>Cardboard with a minimum 30cm square panel</li>	
+				<li>Cardboard box with one side at least 30cm x 30cm</li>	
 			</ul>
 
 		</div>
@@ -118,8 +118,8 @@
 		<div id="contact">
 			
 			<h3>Got some feedback?</h3><br><br>
-			<h4>We would love to hear from you!</h4><br>
-			<p>The Happy Stand has been through many iterations and I am always looking to improve it in any way possible. Let us know if you come up with an improved solution or if you have any questions at all.</p>
+			<h4>I would love to hear from you!</h4><br>
+			<p>The Happy Stand has been through many iterations and I am always looking to improve it. Let me know if you come up with any enhancements or if you have any questions at all - or even if you just want to share a photo of the Happy Stand in action.</p>
 
 			<div class="email_button">
 				<a href="mailto:info@happystands.com">Email us</a>
