Unit 9 responsive version

--- a/unit9/index.html
+++ b/unit9/index.html
@@ -8,20 +8,21 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto:900,500,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<meta name="viewport" content="width=device-width, initialscale=1">
 </head>
 
 <body>
 <div id="page">
 	
-	<div id="top" class="clearfix">
+	<div id="top" class="clearfix"><a name="top_jump"></a>
 
 		<div id="logo">
 			<a href="index.html"><img src="images/logo.png"></a>
 		</div>
 
 		<nav>
-		   	<a href="#video_jump">Watch The Video</a>
 			<a href="#makeyourown_jump">Make Your Own</a>
+		   	<a href="#video_jump">Watch The Video</a>
 		</nav>
 	
 	</div>
@@ -45,14 +46,13 @@
 	</header>
 		
 	<div id="content1">
-		<img src="images/stand1.png" width="325px" height="325px" class="floatleft">
-		<img src="images/stand2.png" width="325px" height="325px" class="floatleft">
-		<img src="images/stand3.png" width="325px" height="325px" class="floatleft">	
+		<img src="images/stand1.png" width="325px" height="325px" class="stand1">
+		<img src="images/stand2.png" width="325px" height="325px" class="stand2">
+		<img src="images/stand3.png" width="325px" height="325px" class="stand3">	
 	</div>
 
-	<div class="content_background"><a name="makeyourown_jump"></a>
-
-		<div id="content2" class="clearfix">
+	
+	<div id="content2" class="clearfix"><a name="makeyourown_jump"></a>
 			<h2>Make your own</h2> 
 
 			<div id="column1" class="floatleft">
@@ -62,7 +62,6 @@
 
 				<div id="column1b">
 				<h4>Macbook air</h4>
-				<br>
 				<p>Smaller template for use with your 11-inch laptop.</p>
 				</div>
 
@@ -78,7 +77,6 @@
 
 				<div id="column2b">
 				<h4>Macbook pro</h4>
-				<br>
 				<p>Larger template for use with laptops 13-inches or greater.</p>
 				</div>
 
@@ -86,8 +84,6 @@
 				<a href="#">Download</a>
 				</div>
 			</div>	
-
-		</div>
 
 	</div>
 
@@ -129,6 +125,11 @@
 
 	</div>
 
+	<div id="top_button">
+		<nav>
+			<a href="#top_jump">back to top</a>
+		</nav>
+	</div>
 
 	</div>
 
