--- a/unit10/index.html
+++ b/unit10/index.html
@@ -30,7 +30,7 @@
   
   </head>
   
-  <body style="margin:0;">
+  <body style="margin:0; width:600px;">
 
     <table border="0" cellspacing="0" width="100%" style="font-family: Helvetica, Arial, sans-serif; line-height: 1.5;">
       
