Responsive changes and BG image added

--- a/theo/index.html
+++ b/theo/index.html
@@ -35,7 +35,7 @@
 			<div id="column1" class="floatleft">
 				<h3>Get in touch:</h3>
 				<div id="coming_soon">
-					<img src="images/comingsoon.png" alt="full site coming soon" height="150px" width="150px">
+					<img src="images/comingsoon.png" alt="full site coming soon" height="150px" width="150px" class="fullsite">
 				</div>
 			</div>
 
