adding link to email address

--- a/theo/index.html
+++ b/theo/index.html
@@ -41,7 +41,7 @@
 
 			<div id="column2">
 				<h4><img src="images/phone.png" height="15px" width="15px">&nbsp;&nbsp;&nbsp;&nbsp;0400 995 997</h4>
-				<h4><img src="images/email.png" height="15px" width="15px"><a href="Theo.k@tpkaccounting.com.au">&nbsp;&nbsp;&nbsp;&nbsp;Theo.k@tpkaccounting.com.au</a></h4>
+				<h4><img src="images/email.png" height="15px" width="15px"><a href="mailto:Theo.k@tpkaccounting.com.au">&nbsp;&nbsp;&nbsp;&nbsp;Theo.k@tpkaccounting.com.au</a></h4>
 				<h4><img src="images/pin.png" height="15px" width="15px">&nbsp;&nbsp;&nbsp;&nbsp;PO 674 Moorebank NSW 1875</h4>
 			</div>	
 
